# mcp-multiverse

./: .gitignore  QUICKSTART.md  README.md  VERIFICATION_REPORT.md  mcp-sync  mcp-sync-manager.py  pyproject.toml  requirements.txt  test_mcp_sync_manager.py  verify_paths.py
.claude/spec/: mcpx-specification.md
src/mcpx/: __init__.py  __main__.py  cli.py  config.py  init.py  models.py  sync.py
src/mcpx/utils/: __init__.py  backup.py  env.py  toml_writer.py  validation.py
tests/: test_backup.py  test_cli_add_remove.py  test_cli_integration.py  test_config.py  test_env.py  test_health_check.py  test_models.py  test_sync.py  test_toml_writer.py  test_validation.py
tests/fixtures/: invalid_config.toml  minimal_config.toml  valid_config.toml
tests/test_platforms/: test_claude.py  test_cline.py  test_codex.py  test_gemini.py  test_kilo.py  test_roo.py
